crates/otio-capi/include/otio.h

/* ===================================================================== *
 * Status
 * ===================================================================== */

/** What a call did, or why it could not. */
typedef enum OtioStatus {
    /** The call succeeded. */
    OTIO_STATUS_OK = 0,
    /** A pointer argument that may not be null was null. */
    OTIO_STATUS_NULL_POINTER = 1,
    /** A string argument was not valid UTF-8. */
    OTIO_STATUS_INVALID_UTF8 = 2,
    /** The call succeeded, and the answer is that there is no value. */
    OTIO_STATUS_NO_VALUE = 3,
    /** A node handle named an object that no longer exists. */
    OTIO_STATUS_STALE_HANDLE = 4,
    /** An argument was outside the range the call accepts. */
    OTIO_STATUS_INVALID_ARGUMENT = 5,
    /** The document could not answer the question asked of it. */
    OTIO_STATUS_CORE_ERROR = 6,
    /** A timecode or time string could not be read or written. */
    OTIO_STATUS_TIME_ERROR = 7,
    /** A file was not valid for the format it was read as. */
    OTIO_STATUS_PARSE_ERROR = 8,
    /** The document holds something the target format cannot express. */
    OTIO_STATUS_UNSUPPORTED = 9,
    /** A file could not be read from or written to disk. */
    OTIO_STATUS_IO_ERROR = 10,
    /** A panic in the Rust core was caught at the boundary. */
    OTIO_STATUS_PANIC = 11
} OtioStatus;
/* ===================================================================== *
 * Values
 * ===================================================================== */

/**
 * A block of bytes owned by the library.
 *
 * `data` is always NUL-terminated, so a buffer holding text can be used as a
 * C string directly; `len` counts the bytes before the terminator, which is
 * what a caller holding binary data needs.
 */
typedef struct OtioBuffer {
    char *data;
    size_t len;
} OtioBuffer;
/** A measure of time, as a `value` in units of `1 / rate` seconds. */
typedef struct OtioRationalTime {
    double value;
    double rate;
} OtioRationalTime;
/* ===================================================================== *
 * Documents and handles
 * ===================================================================== */

/**
 * An OTIO document: the arena that owns every object in a timeline.
 *
 * Releasing it releases every object in it, so handles into it go stale
 * rather than dangling.
 */
typedef struct OtioDocument OtioDocument;
/**
 * A handle to an object in a document.
 *
 * An index into the document's arena and the generation of the slot it was
 * issued for. If the object is removed and the slot reused, the generation no
 * longer matches, so a stale handle fails a lookup instead of reaching the
 * new occupant.
 */
typedef struct OtioNode {
    uint32_t index;
    uint32_t generation;
} OtioNode;
/**
 * Creates a track. `kind` may be null, which means `"Video"`, as upstream's
 * default does.
 */
OtioStatus otio_track_new(
    OtioDocument *target,
    const char *name,
    const char *kind,
    OtioNode *out_node);
/**
 * Creates a timeline. Its tracks stack is not created with it; make one with
 * [`otio_stack_new`] and hand it over with [`otio_timeline_set_tracks`].
 */
OtioStatus otio_timeline_new(
    OtioDocument *target,
    const char *name,
    OtioNode *out_node);
/**
 * Creates a transition. Its offsets start at zero.
 */
OtioStatus otio_transition_new(
    OtioDocument *target,
    const char *name,
    const char *transition_type,
    OtioNode *out_node);
/**
 * Returns what a track carries, such as `"Video"` or `"Audio"`.
 */
OtioStatus otio_track_kind(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioBuffer *out_kind);
/**
 * Sets what a track carries.
 */
OtioStatus otio_track_set_kind(
    OtioDocument *target,
    OtioNode node_handle,
    const char *kind);
/**
 * Returns the stack holding a timeline's tracks.
 *
 * Reports `OTIO_STATUS_NO_VALUE` for a timeline that has none.
 */
OtioStatus otio_timeline_tracks(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioNode *out_tracks);
/**
 * Sets the stack holding a timeline's tracks.
 *
 * Passing `otio_node_none` clears it. The stack's
 * parent is set to the timeline, as upstream's does.
 */
OtioStatus otio_timeline_set_tracks(
    OtioDocument *target,
    OtioNode node_handle,
    OtioNode tracks);
/**
 * Returns where a timeline begins, such as `01:00:00:00`.
 *
 * Reports `OTIO_STATUS_NO_VALUE` for a timeline that does not say.
 */
OtioStatus otio_timeline_global_start_time(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioRationalTime *out_time);
/**
 * Sets where a timeline begins.
 */
OtioStatus otio_timeline_set_global_start_time(
    OtioDocument *target,
    OtioNode node_handle,
    OtioRationalTime time);
/**
 * Returns how far a transition reaches into the item before it.
 */
OtioStatus otio_transition_in_offset(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioRationalTime *out_offset);
/**
 * Sets how far a transition reaches into the item before it.
 */
OtioStatus otio_transition_set_in_offset(
    OtioDocument *target,
    OtioNode node_handle,
    OtioRationalTime offset);
/**
 * Returns how far a transition reaches into the item after it.
 */
OtioStatus otio_transition_out_offset(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioRationalTime *out_offset);
/**
 * Sets how far a transition reaches into the item after it.
 */
OtioStatus otio_transition_set_out_offset(
    OtioDocument *target,
    OtioNode node_handle,
    OtioRationalTime offset);
/**
 * Returns the kind of transition, such as `"SMPTE_Dissolve"`.
 */
OtioStatus otio_transition_type(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioBuffer *out_type);
/**
 * Sets the kind of transition.
 */
OtioStatus otio_transition_set_type(
    OtioDocument *target,
    OtioNode node_handle,
    const char *transition_type);
/**
 * Returns whether a transition is applied.
 */
OtioStatus otio_transition_enabled(
    const OtioDocument *source,
    OtioNode node_handle,
    bool *out_enabled);
/**
 * Sets whether a transition is applied.
 */
OtioStatus otio_transition_set_enabled(
    OtioDocument *target,
    OtioNode node_handle,
    bool enabled);