sdk/csharp/OpenTimelineIO/Interop.cs


    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_timeline_global_start_time(IntPtr source, Native.OtioNode nodeHandle, out Native.OtioRationalTime outTime);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_timeline_new(IntPtr target, IntPtr name, out Native.OtioNode outNode);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_timeline_set_global_start_time(IntPtr target, Native.OtioNode nodeHandle, Native.OtioRationalTime time);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_timeline_set_tracks(IntPtr target, Native.OtioNode nodeHandle, Native.OtioNode tracks);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_timeline_tracks(IntPtr source, Native.OtioNode nodeHandle, out Native.OtioNode outTracks);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_track_kind(IntPtr source, Native.OtioNode nodeHandle, out Native.OtioBuffer outKind);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_track_new(IntPtr target, IntPtr name, IntPtr kind, out Native.OtioNode outNode);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_track_set_kind(IntPtr target, Native.OtioNode nodeHandle, IntPtr kind);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_transition_enabled(IntPtr source, Native.OtioNode nodeHandle, out byte outEnabled);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_transition_in_offset(IntPtr source, Native.OtioNode nodeHandle, out Native.OtioRationalTime outOffset);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_transition_new(IntPtr target, IntPtr name, IntPtr transitionType, out Native.OtioNode outNode);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_transition_out_offset(IntPtr source, Native.OtioNode nodeHandle, out Native.OtioRationalTime outOffset);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_transition_set_enabled(IntPtr target, Native.OtioNode nodeHandle, byte enabled);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_transition_set_in_offset(IntPtr target, Native.OtioNode nodeHandle, Native.OtioRationalTime offset);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_transition_set_out_offset(IntPtr target, Native.OtioNode nodeHandle, Native.OtioRationalTime offset);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_transition_set_type(IntPtr target, Native.OtioNode nodeHandle, IntPtr transitionType);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_transition_type(IntPtr source, Native.OtioNode nodeHandle, out Native.OtioBuffer outType);

}
